# aoc2022

./: pyproject.toml
d01/: __main__.py
d02/: __main__.py  input.txt
d03/: __main__.py
